--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,6 +8,10 @@ plugins {
 android {
     compileSdk 31
 
+    viewBinding {
+        enabled true
+    }
+
     defaultConfig {
         applicationId "com.example.passwordsaver"
         minSdk 24
