--- a/app/build.gradle
+++ b/app/build.gradle
@@ -93,4 +93,5 @@ dependencies {
     testImplementation "androidx.room:room-testing:$room_version"
 
     implementation "androidx.biometric:biometric:1.1.0"
+    implementation "androidx.datastore:datastore-preferences:1.0.0"
 }
